# four-word-networking

./: AUTOCOMPLETE_OPTIMIZATION_REPORT.md  CLAUDE.md  Cargo.toml  GOLD_WORDLIST_OPTIMIZED.txt  README.md  analyze_prefix_lengths.py  expanded_proper_noun_strategy.py  generate_optimized_wordlist.py  identify_replacement_words.py  proper_noun_replacement_strategy.py  replacement_suggestions.py  t.py  test_4wn_compatibility.py  test_autocomplete_improvement.py  test_improved_interactive.sh  test_interactive.sh  validate_5char_uniqueness.py
.claude/: .gitignore  README.md
.claude/state/: project.json
.github/workflows/: comprehensive_tests.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
4wn-cli/: Cargo.toml
benches/: encoding_benchmarks.rs
src/: dictionary4k.rs  four_word_adaptive_encoder.rs  four_word_ipv6_encoder.rs  identity_encoder.rs  ipv6_compression.rs  ipv6_pattern_feistel.rs  lib.rs  property_tests.rs  pure_ip_compression.rs  validation.rs
tests/: api_test.rs  cli_integration_tests.rs  integration_tests.rs  property_tests.rs  test_config.rs  ula_comprehensive_tests.rs  utf8_edge_cases_test.rs
